Add dnd api to get monsters

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 				</select>
 				<button id="roll">Roll</button>
 				<h3 id="result"></h3>
-				<h3 id="message">HP: 8</h3>
+				<h3 id="message"></h3>
+				<h3 id="name"></h3>
+				<h3 id="hp"></h3>
 			</section>
 		</main>
 		<script src="scripts.js"></script>
